; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/msi/extr_action.c_msi_ui_progress.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/msi/extr_action.c_msi_ui_progress.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32 }

@INSTALLMESSAGE_PROGRESS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @msi_ui_progress(i32* %0, i32 %1, i32 %2, i32 %3, i32 %4) #0 {
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca %struct.TYPE_5__*, align 8
  store i32* %0, i32** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  store i32 %4, i32* %10, align 4
  %12 = call %struct.TYPE_5__* @MSI_CreateRecord(i32 4)
  store %struct.TYPE_5__* %12, %struct.TYPE_5__** %11, align 8
  %13 = load %struct.TYPE_5__*, %struct.TYPE_5__** %11, align 8
  %14 = load i32, i32* %7, align 4
  %15 = call i32 @MSI_RecordSetInteger(%struct.TYPE_5__* %13, i32 1, i32 %14)
  %16 = load %struct.TYPE_5__*, %struct.TYPE_5__** %11, align 8
  %17 = load i32, i32* %8, align 4
  %18 = call i32 @MSI_RecordSetInteger(%struct.TYPE_5__* %16, i32 2, i32 %17)
  %19 = load %struct.TYPE_5__*, %struct.TYPE_5__** %11, align 8
  %20 = load i32, i32* %9, align 4
  %21 = call i32 @MSI_RecordSetInteger(%struct.TYPE_5__* %19, i32 3, i32 %20)
  %22 = load %struct.TYPE_5__*, %struct.TYPE_5__** %11, align 8
  %23 = load i32, i32* %10, align 4
  %24 = call i32 @MSI_RecordSetInteger(%struct.TYPE_5__* %22, i32 4, i32 %23)
  %25 = load i32*, i32** %6, align 8
  %26 = load i32, i32* @INSTALLMESSAGE_PROGRESS, align 4
  %27 = load %struct.TYPE_5__*, %struct.TYPE_5__** %11, align 8
  %28 = call i32 @MSI_ProcessMessage(i32* %25, i32 %26, %struct.TYPE_5__* %27)
  %29 = load %struct.TYPE_5__*, %struct.TYPE_5__** %11, align 8
  %30 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %29, i32 0, i32 0
  %31 = call i32 @msiobj_release(i32* %30)
  %32 = call i32 @msi_dialog_check_messages(i32* null)
  ret void
}

declare dso_local %struct.TYPE_5__* @MSI_CreateRecord(i32) #1

declare dso_local i32 @MSI_RecordSetInteger(%struct.TYPE_5__*, i32, i32) #1

declare dso_local i32 @MSI_ProcessMessage(i32*, i32, %struct.TYPE_5__*) #1

declare dso_local i32 @msiobj_release(i32*) #1

declare dso_local i32 @msi_dialog_check_messages(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
